@@ -1,0 +1,15 @@
+# This file gathers the routes and the rights required to access each of them
+# This file is called by the ControllerAuthorization Listener
+
+"ajax.editabsencereasons":
+    - 100
+"ajax.holidaydelete":
+    - 100
+"ajax.changepassword":
+    - 21
+"ajax.planningjobcheckcopy":
+    - 100
+"ajax.mailtest":
+    - 100
+"ajax.holidaycredit":
+    - 100
