@@ -4,9 +4,14 @@ namespace App\Listener;
 
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\HttpKernel\Event\GetResponseEvent;
+use Doctrine\ORM\EntityManagerInterface;
 
 use Doctrine\Common\Annotations\Reader;
 use Symfony\Component\HttpKernel\Event\FilterControllerEvent;
+use Symfony\Component\Yaml\Yaml;
+
+use App\Model\Agent;
+use App\Model\Access;
 
 use ReflectionClass;
 
@@ -15,34 +20,60 @@ class ControllerAuthorizationListener
 
     private $templateParams = array();
 
-    private $permissions = array(
-        'ajax.editabsencereasons' => array(100),
-        'ajax.holidaydelete' => array(100),
-        'ajax.changepassword' => array(21),
-    );
+    private $permissions = array();
 
-    public function __construct(\Twig_Environment $twig)
+    protected $entityManager;
+
+    public function __construct(\Twig_Environment $twig, EntityManagerInterface $em)
     {
+        $this->permissions = Yaml::parseFile(__DIR__."/../../config/permissions.yaml");
+
         $this->twig = $twig;
 
         $this->templateParams = $GLOBALS['templates_params'];
         $this->droits = $GLOBALS['droits'];
+        $this->entityManager = $em;
     }
 
     public function onKernelRequest(GetResponseEvent $event)
     {
+        $page = $event->getRequest()->getPathInfo();
+        $page = preg_replace('/([a-z\/]*).*/', "$1", $page);
+        $page = rtrim($page, '/add');
+        $page = rtrim($page, '/');
+
+        // Droits necessair<es pour consulter la page en cours
+        $accesses = $this->entityManager->getRepository(Access::class)->findBy(array('page' => $page));
+        $logged_in = $this->entityManager->find(Agent::class, $_SESSION['login_id']);
+
         $route = $event->getRequest()->attributes->get('_route');
 
-        if (!$this->canAccess($route)) {
-            $body = $this->twig->render('access-denied.html.twig', $this->templateParams);
-
-            $response = new Response();
-            $response->setContent($body);
-            $response->setStatusCode(403);
-
-            $event->setResponse($response);
+        if ($_SESSION['oups']["Auth-Mode"] == 'Anonyme' ) {
+            foreach ($accesses as $access) {
+                if ($access->groupe_id() == '99') {
+                    return;
+                }
+            }
+            $this->triggerAccessDenied($event);
+            return;
         }
 
+        if(!$logged_in){
+            $this->triggerAccessDenied($event);
+            return;
+        }
+
+
+        if(empty($this->permissions[$route])){
+            if (!$logged_in->can_access($accesses)){
+                $this->triggerAccessDenied($event);
+            }
+            return;
+        }
+
+        if (!$this->canAccess($route)) {
+            $this->triggerAccessDenied($event);
+        }
     }
 
     private function canAccess($route)
@@ -80,5 +111,16 @@ class ControllerAuthorizationListener
         }
 
         return false;
+    }
+
+    private function triggerAccessDenied(GetResponseEvent $event){
+
+        $body = $this->twig->render('access-denied.html.twig', $this->templateParams);
+
+        $response = new Response();
+        $response->setContent($body);
+        $response->setStatusCode(403);
+
+        $event->setResponse($response);
     }
 }
